# LLMops_RAG_project

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: aws.yml  ci.yml  task_defination.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py
multi_doc_chat/utils/: file_io.py  model_loader.py
notebook/: RAG.ipynb  eval.ipynb  experiments.ipynb
templates/: app.py
